@@ -42,6 +42,9 @@ Release 2.0.5-beta - UNRELEASED
     HADOOP-9496. Bad merge of HADOOP-9450 on branch-2 breaks all bin/hadoop
     calls that need HADOOP_CLASSPATH. (harsh)
 
+    HADOOP-9503. Remove sleep between IPC client connect timeouts.
+    (Varun Sharma via szetszwo)
+
   OPTIMIZATIONS
 
     HADOOP-9150. Avoid unnecessary DNS resolution attempts for logical URIs
